Ch20 Before eventLister

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/my_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
-        tools:listitem="@layout/activity_chat"
+        android:layout_weight="1"
         />
 
     <LinearLayout
@@ -20,11 +21,14 @@
         android:weightSum="1">
 
         <EditText
+            android:id="@+id/EditText_chat"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1 "/>
         <Button
-            android:layout_width="50dp"
+            android:id="@+id/Button_send"
+            android:text="send"
+            android:layout_width="80dp"
             android:layout_height="match_parent"/>
     </LinearLayout>
 
