--- a/app/src/main/res/layout/row_chat.xml
+++ b/app/src/main/res/layout/row_chat.xml
@@ -8,11 +8,13 @@
 
     <TextView
         android:id="@+id/TextView_nickname"
+        android:textSize="12sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <TextView
         android:id="@+id/TextView_msg"
+        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
